update lightfm model

--- a/notebooks/lightfm.ipynb
+++ b/notebooks/lightfm.ipynb
@@ -21,7 +21,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 2,
       "metadata": {},
       "outputs": [
         {
@@ -86,7 +86,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {},
       "outputs": [
         {
@@ -166,7 +166,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 5,
       "metadata": {},
       "outputs": [
         {
@@ -868,6 +868,302 @@
         "</html>\n",
         "\n",
         "`Наилучшая конфигурация достигла NDCG@100 = 0.2218`"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "**Обучение для предсказания на тестовую выборку**"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "train_val_df = pd.concat([train_df, val_df], ignore_index=True)\n",
+        "\n",
+        "builder_trainval = BERT4RecDatasetBuilder(train_val_df)\n",
+        "dataset, item_net_config = builder_trainval.build_dataset(\n",
+        "    use_item_embeddings=False,\n",
+        "    use_price_features=False,\n",
+        "    use_temporal_features=False,\n",
+        "    use_user_features=True,\n",
+        "    n_factors=NO_COMPONENTS\n",
+        ")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 7,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "LightFM model created successfully\n"
+          ]
+        }
+      ],
+      "source": [
+        "base_model = LightFM(\n",
+        "    no_components=NO_COMPONENTS,\n",
+        "    k=K,\n",
+        "    n=N,\n",
+        "    learning_schedule=LEARNING_SCHEDULE,\n",
+        "    loss=LOSS,\n",
+        "    learning_rate=LEARNING_RATE,\n",
+        "    rho=RHO,\n",
+        "    epsilon=float(EPSILON),\n",
+        "    item_alpha=ITEM_ALPHA,\n",
+        "    user_alpha=USER_ALPHA,\n",
+        "    max_sampled=MAX_SAMPLED,\n",
+        "    random_state=RANDOM_STATE\n",
+        ")\n",
+        "\n",
+        "model = LightFMWrapperModel(\n",
+        "    model=base_model,\n",
+        "    epochs=EPOCHS,\n",
+        "    num_threads=NUM_THREADS,\n",
+        "    recommend_n_threads=RECOMMEND_N_THREADS,\n",
+        "    recommend_use_gpu_ranking=RECOMMEND_USE_GPU_RANKING,\n",
+        "    verbose=VERBOSE\n",
+        ")\n",
+        "\n",
+        "print(\"LightFM model created successfully\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 9,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "Epoch: 100%|██████████| 200/200 [32:18<00:00,  9.69s/it]"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "CPU times: user 32min 12s, sys: 5.85 s, total: 32min 17s\n",
+            "Wall time: 32min 18s\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "\n"
+          ]
+        },
+        {
+          "data": {
+            "text/plain": [
+              "<rectools.models.lightfm.LightFMWrapperModel at 0x10c60d2d0>"
+            ]
+          },
+          "execution_count": 9,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "%%time\n",
+        "model.fit(dataset)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 10,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "CPU times: user 14.3 s, sys: 1.44 s, total: 15.7 s\n",
+            "Wall time: 1.39 s\n"
+          ]
+        },
+        {
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>user_id</th>\n",
+              "      <th>lightfm_recs</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>11</td>\n",
+              "      <td>[7952, 11413, 27697, 2338, 7590, 11788, 27331,...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>14</td>\n",
+              "      <td>[10879, 25795, 12690, 14972, 19756, 11506, 954...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>21</td>\n",
+              "      <td>[12101, 16561, 7548, 16184, 30430, 16222, 1141...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>29</td>\n",
+              "      <td>[30010, 8162, 27968, 1269, 8834, 3108, 19359, ...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>39</td>\n",
+              "      <td>[25723, 29623, 29707, 19002, 83, 3717, 24093, ...</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "   user_id                                       lightfm_recs\n",
+              "0       11  [7952, 11413, 27697, 2338, 7590, 11788, 27331,...\n",
+              "1       14  [10879, 25795, 12690, 14972, 19756, 11506, 954...\n",
+              "2       21  [12101, 16561, 7548, 16184, 30430, 16222, 1141...\n",
+              "3       29  [30010, 8162, 27968, 1269, 8834, 3108, 19359, ...\n",
+              "4       39  [25723, 29623, 29707, 19002, 83, 3717, 24093, ..."
+            ]
+          },
+          "execution_count": 10,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "%%time\n",
+        "test_users = test_df['user_id'].unique()\n",
+        "\n",
+        "recommendations = model.recommend(\n",
+        "    users=test_users,\n",
+        "    dataset=dataset,\n",
+        "    k=TOP_K,\n",
+        "    filter_viewed=False\n",
+        ")\n",
+        "\n",
+        "recs_grouped = recommendations.groupby('user_id', as_index=False)['item_id'].agg(list)\n",
+        "recs_grouped.columns = ['user_id', 'lightfm_recs']\n",
+        "recs_grouped.head()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 11,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "joined = dp.get_grouped_data(train_orig, val_orig, test_df)\n",
+        "joined['train_val_interactions'] = joined['train_interactions'] + joined['val_interactions']\n",
+        "\n",
+        "evaluation_df = joined.merge(\n",
+        "    recs_grouped, \n",
+        "    on='user_id', \n",
+        "    how='left'\n",
+        ")\n",
+        "\n",
+        "evaluation_df['lightfm_recs'] = evaluation_df['lightfm_recs'].apply(\n",
+        "    lambda x: x if isinstance(x, list) else []\n",
+        ")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 12,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "[Metrics debug] resolved gt_col='test_interactions' item_id_index=0\n",
+            "[Metrics debug] ratings_true shape: (223395, 3) ratings_pred shape: (742500, 3)\n",
+            "  ratings_true dtypes: {'user_id': dtype('int64'), 'item_id': dtype('int64')}\n",
+            "  ratings_pred dtypes: {'user_id': dtype('int64'), 'item_id': dtype('int64')}\n",
+            "  user_id=11 gt_count=9 pred_count=100 overlap=2\n",
+            "  user_id=14 gt_count=56 pred_count=100 overlap=2\n",
+            "  user_id=21 gt_count=43 pred_count=100 overlap=11\n",
+            "\n",
+            "At k=10:\n",
+            "  MAP@10       = 0.0847\n",
+            "  NDCG@10      = 0.2305\n",
+            "  Precision@10 = 0.1252\n",
+            "  Recall@10    = 0.0452\n",
+            "\n",
+            "At k=100:\n",
+            "  MAP@100       = 0.0557\n",
+            "  NDCG@100      = 0.2314\n",
+            "  Precision@100 = 0.0707\n",
+            "  Recall@100    = 0.2172\n",
+            "\n",
+            "Other Metrics:\n",
+            "  MRR                 = 0.2266\n",
+            "  Catalog Coverage    = 0.9521\n",
+            "  Diversity     = 0.9966  [0=same recs for all, 1=unique recs]\n",
+            "  Novelty             = 0.9053\n",
+            "  Serendipity         = 0.0171\n"
+          ]
+        }
+      ],
+      "source": [
+        "metrics_result = calculate_metrics(\n",
+        "    evaluation_df,\n",
+        "    train_col='train_val_interactions',\n",
+        "    gt_col='test_interactions',\n",
+        "    model_preds='lightfm_recs',\n",
+        "    verbose=True\n",
+        ")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 13,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "236908055"
+            ]
+          },
+          "execution_count": 13,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "model_trainval = \"models_test/lightfm_model.pkl\"\n",
+        "model.save(model_trainval)"
       ]
     }
   ],
