--- a/notebooks/reciprocal_rank_fusion.ipynb
+++ b/notebooks/reciprocal_rank_fusion.ipynb
@@ -5,12 +5,12 @@
    "id": "106ea597",
    "metadata": {},
    "source": [
-    "### RECIPROCAL RANK FUSION (RRF)"
+    "### Reciprocal Rank Fusion (RRF)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "6e5ea913",
    "metadata": {},
    "outputs": [],
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "a639ee85",
    "metadata": {},
    "outputs": [
@@ -63,18 +63,20 @@
     "    min_item_interactions=20\n",
     ")\n",
     "train_df, val_df, test_df = dp.preprocess()\n",
+    "trainval_df = pd.concat([train_df, val_df], ignore_index=True)\n",
     "\n",
-    "joined = dp.get_grouped_data(train_df, val_df, test_df)"
+    "joined = dp.get_grouped_data(train_df, val_df, test_df)\n",
+    "joined['train_val_interactions'] = joined['train_interactions'] + joined['val_interactions']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "id": "73e70435",
    "metadata": {},
    "outputs": [],
    "source": [
-    "all_recs = pd.read_parquet(\"all_recs.parquet\")\n",
+    "all_recs = pd.read_parquet(\"models_test/data/all_recs_test.parquet\")\n",
     "model_columns = all_recs.columns[all_recs.columns.str.endswith('_recs')].tolist()\n",
     "for col in model_columns:\n",
     "    if all_recs[col].dtype == 'object':\n",
@@ -85,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 5,
    "id": "2d9e0b77",
    "metadata": {},
    "outputs": [],
@@ -104,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 7,
    "id": "60af8608",
    "metadata": {},
    "outputs": [
@@ -119,7 +121,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "RRF: 100%|██████████| 7425/7425 [00:01<00:00, 5740.15it/s]\n"
+      "RRF: 100%|██████████| 7425/7425 [00:01<00:00, 6171.30it/s]\n"
      ]
     },
     {
@@ -127,33 +129,32 @@
      "output_type": "stream",
      "text": [
       "RRF recommendations generated for 7425 users\n",
-      "[Metrics debug] resolved gt_col='val_interactions' item_id_index=0\n",
-      "[Metrics debug] ratings_true shape: (228339, 3) ratings_pred shape: (742500, 3)\n",
+      "[Metrics debug] resolved gt_col='test_interactions' item_id_index=0\n",
+      "[Metrics debug] ratings_true shape: (223395, 3) ratings_pred shape: (742500, 3)\n",
       "  ratings_true dtypes: {'user_id': dtype('int64'), 'item_id': dtype('int64')}\n",
       "  ratings_pred dtypes: {'user_id': dtype('int64'), 'item_id': dtype('int64')}\n",
-      "  user_id=11 gt_count=22 pred_count=100 overlap=6\n",
-      "  user_id=14 gt_count=5 pred_count=100 overlap=0\n",
-      "    [ID spaces] gt sample=[9341, 16732, 17585, 28024, 30789] range=[9341, 30789] | rec sample=[1245, 1313, 1683, 1809, 2175] range=[1245, 30825]\n",
-      "  user_id=21 gt_count=47 pred_count=100 overlap=13\n",
+      "  user_id=11 gt_count=9 pred_count=100 overlap=2\n",
+      "  user_id=14 gt_count=56 pred_count=100 overlap=7\n",
+      "  user_id=21 gt_count=43 pred_count=100 overlap=14\n",
       "\n",
       "At k=10:\n",
-      "  MAP@10       = 0.1750\n",
-      "  NDCG@10      = 0.4307\n",
-      "  Precision@10 = 0.1928\n",
-      "  Recall@10    = 0.0614\n",
+      "  MAP@10       = 0.1927\n",
+      "  NDCG@10      = 0.4620\n",
+      "  Precision@10 = 0.1970\n",
+      "  Recall@10    = 0.0637\n",
       "\n",
       "At k=100:\n",
-      "  MAP@100       = 0.0812\n",
-      "  NDCG@100      = 0.2877\n",
-      "  Precision@100 = 0.0774\n",
-      "  Recall@100    = 0.2319\n",
+      "  MAP@100       = 0.0906\n",
+      "  NDCG@100      = 0.3161\n",
+      "  Precision@100 = 0.0850\n",
+      "  Recall@100    = 0.2623\n",
       "\n",
       "Other Metrics:\n",
-      "  MRR                 = 0.2857\n",
-      "  Catalog Coverage    = 0.9188\n",
+      "  MRR                 = 0.3078\n",
+      "  Catalog Coverage    = 0.9210\n",
       "  Diversity     = 0.9965  [0=same recs for all, 1=unique recs]\n",
-      "  Novelty             = 0.7398\n",
-      "  Serendipity         = 0.0383\n"
+      "  Novelty             = 0.7259\n",
+      "  Serendipity         = 0.0351\n"
      ]
     }
    ],
@@ -217,11 +218,10 @@
     "    lambda x: x if isinstance(x, list) else []\n",
     ")\n",
     "\n",
-    "\n",
     "metrics_rrf = calculate_metrics(\n",
     "    evaluation_df_rrf,\n",
-    "    train_col='train_interactions',\n",
-    "    gt_col='val_interactions',\n",
+    "    train_col='train_val_interactions',\n",
+    "    gt_col='test_interactions',\n",
     "    model_preds='rrf_recs',\n",
     "    verbose=True\n",
     ")"
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 8,
    "id": "d4cfd80d",
    "metadata": {},
    "outputs": [
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 9,
    "id": "bfe30efe",
    "metadata": {},
    "outputs": [
@@ -272,7 +272,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Weighted RRF: 100%|██████████| 7425/7425 [00:01<00:00, 5852.57it/s]\n"
+      "Weighted RRF: 100%|██████████| 7425/7425 [00:01<00:00, 4921.43it/s]\n"
      ]
     }
    ],
@@ -342,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 10,
    "id": "11148e0a",
    "metadata": {},
    "outputs": [
@@ -350,33 +350,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[Metrics debug] resolved gt_col='val_interactions' item_id_index=0\n",
-      "[Metrics debug] ratings_true shape: (228339, 3) ratings_pred shape: (742500, 3)\n",
+      "[Metrics debug] resolved gt_col='test_interactions' item_id_index=0\n",
+      "[Metrics debug] ratings_true shape: (223395, 3) ratings_pred shape: (742500, 3)\n",
       "  ratings_true dtypes: {'user_id': dtype('int64'), 'item_id': dtype('int64')}\n",
       "  ratings_pred dtypes: {'user_id': dtype('int64'), 'item_id': dtype('int64')}\n",
-      "  user_id=11 gt_count=22 pred_count=100 overlap=7\n",
-      "  user_id=14 gt_count=5 pred_count=100 overlap=0\n",
-      "    [ID spaces] gt sample=[9341, 16732, 17585, 28024, 30789] range=[9341, 30789] | rec sample=[153, 536, 1245, 1683, 1809] range=[153, 30913]\n",
-      "  user_id=21 gt_count=47 pred_count=100 overlap=14\n",
+      "  user_id=11 gt_count=9 pred_count=100 overlap=2\n",
+      "  user_id=14 gt_count=56 pred_count=100 overlap=6\n",
+      "  user_id=21 gt_count=43 pred_count=100 overlap=14\n",
       "\n",
       "At k=10:\n",
-      "  MAP@10       = 0.2373\n",
-      "  NDCG@10      = 0.5304\n",
-      "  Precision@10 = 0.2187\n",
-      "  Recall@10    = 0.0686\n",
+      "  MAP@10       = 0.2342\n",
+      "  NDCG@10      = 0.5307\n",
+      "  Precision@10 = 0.2166\n",
+      "  Recall@10    = 0.0724\n",
       "\n",
       "At k=100:\n",
-      "  MAP@100       = 0.0926\n",
-      "  NDCG@100      = 0.3006\n",
-      "  Precision@100 = 0.0737\n",
-      "  Recall@100    = 0.2208\n",
+      "  MAP@100       = 0.0968\n",
+      "  NDCG@100      = 0.3194\n",
+      "  Precision@100 = 0.0793\n",
+      "  Recall@100    = 0.2473\n",
       "\n",
       "Other Metrics:\n",
-      "  MRR                 = 0.3179\n",
-      "  Catalog Coverage    = 0.9259\n",
-      "  Diversity     = 0.9965  [0=same recs for all, 1=unique recs]\n",
-      "  Novelty             = 0.7988\n",
-      "  Serendipity         = 0.0317\n"
+      "  MRR                 = 0.3220\n",
+      "  Catalog Coverage    = 0.8963\n",
+      "  Diversity     = 0.9964  [0=same recs for all, 1=unique recs]\n",
+      "  Novelty             = 0.7932\n",
+      "  Serendipity         = 0.0306\n"
      ]
     }
    ],
@@ -386,11 +385,10 @@
     "    lambda x: x if isinstance(x, list) else []\n",
     ")\n",
     "\n",
-    "\n",
     "metrics_rrf = calculate_metrics(\n",
     "    evaluation_df_rrf,\n",
-    "    train_col='train_interactions',\n",
-    "    gt_col='val_interactions',\n",
+    "    train_col='train_val_interactions',\n",
+    "    gt_col='test_interactions',\n",
     "    model_preds='rrf_weighted_recs',\n",
     "    verbose=True\n",
     ")"
@@ -398,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 11,
    "id": "fd78d041",
    "metadata": {},
    "outputs": [
@@ -414,7 +412,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Weighted RRF: 100%|██████████| 7425/7425 [00:01<00:00, 5931.71it/s]\n"
+      "Weighted RRF: 100%|██████████| 7425/7425 [00:01<00:00, 6142.90it/s]\n"
      ]
     }
    ],
@@ -438,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 12,
    "id": "7cfd2f35",
    "metadata": {},
    "outputs": [
@@ -446,33 +444,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[Metrics debug] resolved gt_col='val_interactions' item_id_index=0\n",
-      "[Metrics debug] ratings_true shape: (228339, 3) ratings_pred shape: (742500, 3)\n",
+      "[Metrics debug] resolved gt_col='test_interactions' item_id_index=0\n",
+      "[Metrics debug] ratings_true shape: (223395, 3) ratings_pred shape: (742500, 3)\n",
       "  ratings_true dtypes: {'user_id': dtype('int64'), 'item_id': dtype('int64')}\n",
       "  ratings_pred dtypes: {'user_id': dtype('int64'), 'item_id': dtype('int64')}\n",
-      "  user_id=11 gt_count=22 pred_count=100 overlap=6\n",
-      "  user_id=14 gt_count=5 pred_count=100 overlap=0\n",
-      "    [ID spaces] gt sample=[9341, 16732, 17585, 28024, 30789] range=[9341, 30789] | rec sample=[1245, 1313, 1683, 1809, 2175] range=[1245, 30913]\n",
-      "  user_id=21 gt_count=47 pred_count=100 overlap=15\n",
+      "  user_id=11 gt_count=9 pred_count=100 overlap=2\n",
+      "  user_id=14 gt_count=56 pred_count=100 overlap=6\n",
+      "  user_id=21 gt_count=43 pred_count=100 overlap=12\n",
       "\n",
       "At k=10:\n",
-      "  MAP@10       = 0.3826\n",
-      "  NDCG@10      = 0.7377\n",
-      "  Precision@10 = 0.2927\n",
-      "  Recall@10    = 0.0894\n",
+      "  MAP@10       = 0.3491\n",
+      "  NDCG@10      = 0.7018\n",
+      "  Precision@10 = 0.2824\n",
+      "  Recall@10    = 0.0927\n",
       "\n",
       "At k=100:\n",
       "  MAP@100       = 0.1330\n",
-      "  NDCG@100      = 0.3645\n",
-      "  Precision@100 = 0.0833\n",
-      "  Recall@100    = 0.2414\n",
+      "  NDCG@100      = 0.3779\n",
+      "  Precision@100 = 0.0902\n",
+      "  Recall@100    = 0.2727\n",
       "\n",
       "Other Metrics:\n",
-      "  MRR                 = 0.3930\n",
-      "  Catalog Coverage    = 0.9754\n",
+      "  MRR                 = 0.3832\n",
+      "  Catalog Coverage    = 0.9701\n",
       "  Diversity     = 0.9967  [0=same recs for all, 1=unique recs]\n",
-      "  Novelty             = 0.8091\n",
-      "  Serendipity         = 0.0198\n"
+      "  Novelty             = 0.7657\n",
+      "  Serendipity         = 0.0214\n"
      ]
     }
    ],
@@ -482,11 +479,10 @@
     "    lambda x: x if isinstance(x, list) else []\n",
     ")\n",
     "\n",
-    "\n",
     "metrics_rrf = calculate_metrics(\n",
     "    evaluation_df_rrf,\n",
-    "    train_col='train_interactions',\n",
-    "    gt_col='val_interactions',\n",
+    "    train_col='train_val_interactions',\n",
+    "    gt_col='test_interactions',\n",
     "    model_preds='rrf_weighted_recs',\n",
     "    verbose=True\n",
     ")"
@@ -494,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 13,
    "id": "c550287b",
    "metadata": {},
    "outputs": [
@@ -502,7 +498,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Средняя цена рекомендаций модели RRF (v2) на валидации: -3.86\n"
+      "Средняя цена рекомендаций модели RRF (v2) на валидации: -3.85\n"
      ]
     }
    ],
@@ -517,13 +513,13 @@
    "metadata": {},
    "source": [
     "```\n",
-    "Удалось наконец-то побить результат модели TopPersonal на валидационной выборке (0.3455)!\n",
-    "NDCG@100 с использованием взвешенного RRF = 0.3645.\n",
+    "Удалось наконец-то побить результат модели TopPersonal на тестовой выборке (0.3752)!\n",
+    "NDCG@100 с использованием взвешенного RRF = 0.3779.\n",
     "\n",
-    "Novelty=0.78 говорит о том, что есть хороший баланс между популярными товарами и новизной.\n",
+    "Novelty=0.77 говорит о том, что есть хороший баланс между популярными товарами и новизной.\n",
     "Serendipity в 0.02 говорит о том, что 2% рекомендаций оказываются неожиданными и релевантными, в то время как у модели TopPersonal Serendipity равняется нулю.\n",
     "\n",
-    "Средняя цена рекомендаций модели при этом не изменилась.\n",
+    "Средняя цена рекомендаций модели при этом увеличилась незначительно (на 0.01).\n",
     "```"
    ]
   }
